--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -2,6 +2,7 @@
         './_banner-strip',
         './_banner-folha',
         './_pontos-coleta',
+        './_interna-sobre',
         './_banner-planeta',
         './_banner-caixa',
         './_ultimas-noticias',
