--- a/scss/sections/__interna-sobre.scss
+++ b/scss/sections/__interna-sobre.scss
@@ -7,6 +7,7 @@
     
     @media screen and (max-width: $bp-LG){
         flex-direction: column;
+        padding-top: 76px;
     }
     
     &__header{
