--- a/partials/__footer.html
+++ b/partials/__footer.html
@@ -140,14 +140,14 @@
             </div>
             <div class="col-lg-4 d-flex align-items-center order-last">
                 <div class="footer__right">
-                    <a href="#" class="color-white d-block mb-3 wow fadeInUp">
+                    <a href="#" class="color-white d-block mb-2 wow fadeInUp">
                         Validar certificado / Selo
                     </a>
 
-                    <a href="#" class="btn-cprimary py-2  d-block mb-3  wow fadeInUp" data-wow-delay="0.2s">
+                    <a href="#" class="btn-cprimary py-2 px-4 d-block mb-2  wow fadeInUp" data-wow-delay="0.2s">
                         Solicitar a destinação
                     </a>
-                    <a href="#" class="btn-csecondary py-2  d-block mb-3 wow fadeInUp" data-wow-delay="0.3s">
+                    <a href="#" class="btn-csecondary py-2 px-4 d-block mb-3 wow fadeInUp" data-wow-delay="0.3s">
                         Área restrita
                     </a>
 
