--- a/scss/sections/__banner-folha.scss
+++ b/scss/sections/__banner-folha.scss
@@ -43,7 +43,8 @@
             color: #707070;
             font-weight: 400;
             font-size: 21px;
-            max-width: 500px;
+            max-width: 530px;
+            margin-bottom: 50px;
 
             @media screen and (max-width: $bp-MD){
                 font-size: 19px;
