--- a/partials/__navbar-branco.html
+++ b/partials/__navbar-branco.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
 
-            <p>
+            <p class="mr-lg-4 pr-lg-1">
                 <i class="fa fa-envelope color-primary"></i>
                 <a href="mailto:atendimento@iber.org.br" class="color-white">atendimento@iber.org.br</a>
             </p>
