--- a/scss/sections/__interna-sobre.scss
+++ b/scss/sections/__interna-sobre.scss
@@ -23,7 +23,7 @@
             text-transform: uppercase;
             font-weight: bold;
             color: #7DA04C;
-            margin-bottom: 24px;
+            margin-bottom: 39px;
             
             @media screen and (max-width: $bp-LG){
                 margin-bottom: 20px;
@@ -51,6 +51,12 @@
             text-align: center;
             width: 100%;
             padding: 40px 16px;
+        }
+
+        .text{
+            p{
+                margin-bottom: 25px;
+            }
         }
     }
     
