--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -5,5 +5,6 @@
         './_interna-sobre',
         './_banner-planeta',
         './_banner-caixa',
+        './_estrutura',
         './_ultimas-noticias',
         './_conheca-steps';
