Add legislacao page

--- a/scss/components/UI/__forms.scss
+++ b/scss/components/UI/__forms.scss
@@ -1,17 +1,17 @@
 .form-control {
     width: 100%;
     font-size: 14px;
-    padding: 13px 14px;
-    border-radius: 29px;
-    border: 1px solid #707070;
-    background-color: transparent;
-    color: #383838;
+    background-color: #fff;
+    border: none;
+    padding: 10px 14px;
+    color: #707070;
     font-weight: 400;
-    border-radius: 5px;
+    border-radius: 4px;
+    box-shadow: 0px 3px 6px rgba(0,0,0,.20);
+    
     &:focus {
-        box-shadow: none;
-        border: 1px solid #636363;
         outline: none;
+        box-shadow: 0px 3px 6px rgba(0,0,0,.20);
         color: #383838;
     }
 
@@ -28,13 +28,8 @@
 
 }
 
-.select-transparent {
-    background: transparent !important;
-    background-color: transparent !important;
-    border: none !important;
-    font-weight: bold;
-    padding: 0 !important;
-    margin-left: -3px;
+select.form-control{
+    height: 43px !important;
 }
 
 .form-group {
@@ -49,130 +44,5 @@
         color: rgb(224, 119, 119);
         font-size: 13px;
         margin-top: 4px;
-    }
-}
-
-.form-password {
-    position: relative;
-    width: 100%;
-
-    .btn-eye {
-        position: absolute;
-        top: 24px;
-        font-size: 13px;
-        right: 20px;
-        opacity: 0.8;
-        background: none;
-        background-color: none;
-        border: none;
-        color: #707070;
-
-        .fa {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            opacity: 0;
-            transform: translate(-50%, -50%);
-            transition: opacity 0.2s;
-        }
-
-        .fa-eye-slash {
-            opacity: 0;
-        }
-
-        .fa-eye {
-            opacity: 1;
-        }
-
-        &[data-active="false"] {
-            .fa-eye {
-                opacity: 0;
-            }
-
-            .fa-eye-slash {
-                opacity: 1;
-            }
-        }
-    }
-}
-
-.input-search{
-    display: flex;
-    align-items: center;
-    display: flex;
-    margin-right: 120px;
-    width: auto;
-
-    button {
-        background: none;
-        border: none;
-        color: #414292;
-        margin-right: 6px;
-    }
-
-    input {
-        background: none;
-        border: none;
-        color: #909090;
-        width: 300px;
-
-        @media screen and (max-width: $bp-LG){
-            width: 110px;
-        }
-        
-        &:active,
-        &:focus {
-            border: none;
-            outline: none;
-            box-shadow: none;
-        }
-    }
-}
-
-.quantity-input{
-    display: flex;
-    border: 1.3px solid $color-primary;
-    border-radius: 10px;
-    
-    input, button{
-        height: 41px;
-    }
-
-    input{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        background: none;
-        border: none;
-        width: 90px;
-        background-color: #fff;
-        font-size: 24px;
-        color: $color-dark;
-        font-weight: 500;
-        
-        /* Chrome, Safari, Edge, Opera */
-        &::-webkit-outer-spin-button,
-        &::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-        }
-
-        /* Firefox */
-        &[type=number] {
-        -moz-appearance: textfield;
-        }
-    }
-
-    button{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 5px;
-        background-color: $color-primary;
-        border: none;
-        height: 41px;
-        width: 41px;
-        color: #fff;
     }
 }
