--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -6,5 +6,7 @@
         './_banner-planeta',
         './_banner-caixa',
         './_estrutura',
+        './_legislacao',
+        './_pg-interna',
         './_ultimas-noticias',
         './_conheca-steps';
