--- a/css/style.css
+++ b/css/style.css
@@ -770,19 +770,18 @@ button:focus {
 .form-control {
   width: 100%;
   font-size: 14px;
-  padding: 13px 14px;
-  border-radius: 29px;
-  border: 1px solid #707070;
-  background-color: transparent;
-  color: #383838;
+  background-color: #fff;
+  border: none;
+  padding: 10px 14px;
+  color: #707070;
   font-weight: 400;
-  border-radius: 5px;
+  border-radius: 4px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .form-control:focus {
-  box-shadow: none;
-  border: 1px solid #636363;
   outline: none;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
   color: #383838;
 }
 
@@ -797,13 +796,8 @@ button:focus {
   border-color: #e07777;
 }
 
-.select-transparent {
-  background: transparent !important;
-  background-color: transparent !important;
-  border: none !important;
-  font-weight: bold;
-  padding: 0 !important;
-  margin-left: -3px;
+select.form-control {
+  height: 43px !important;
 }
 
 .form-group label {
@@ -817,129 +811,6 @@ button:focus {
   color: #e07777;
   font-size: 13px;
   margin-top: 4px;
-}
-
-.form-password {
-  position: relative;
-  width: 100%;
-}
-
-.form-password .btn-eye {
-  position: absolute;
-  top: 24px;
-  font-size: 13px;
-  right: 20px;
-  opacity: 0.8;
-  background: none;
-  background-color: none;
-  border: none;
-  color: #707070;
-}
-
-.form-password .btn-eye .fa {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  opacity: 0;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.2s;
-}
-
-.form-password .btn-eye .fa-eye-slash {
-  opacity: 0;
-}
-
-.form-password .btn-eye .fa-eye {
-  opacity: 1;
-}
-
-.form-password .btn-eye[data-active="false"] .fa-eye {
-  opacity: 0;
-}
-
-.form-password .btn-eye[data-active="false"] .fa-eye-slash {
-  opacity: 1;
-}
-
-.input-search {
-  display: flex;
-  align-items: center;
-  display: flex;
-  margin-right: 120px;
-  width: auto;
-}
-
-.input-search button {
-  background: none;
-  border: none;
-  color: #414292;
-  margin-right: 6px;
-}
-
-.input-search input {
-  background: none;
-  border: none;
-  color: #909090;
-  width: 300px;
-}
-
-@media screen and (max-width: 992px) {
-  .input-search input {
-    width: 110px;
-  }
-}
-
-.input-search input:active, .input-search input:focus {
-  border: none;
-  outline: none;
-  box-shadow: none;
-}
-
-.quantity-input {
-  display: flex;
-  border: 1.3px solid #7DA04C;
-  border-radius: 10px;
-}
-
-.quantity-input input, .quantity-input button {
-  height: 41px;
-}
-
-.quantity-input input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background: none;
-  border: none;
-  width: 90px;
-  background-color: #fff;
-  font-size: 24px;
-  color: #707070;
-  font-weight: 500;
-  /* Chrome, Safari, Edge, Opera */
-  /* Firefox */
-}
-
-.quantity-input input::-webkit-outer-spin-button, .quantity-input input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.quantity-input input[type=number] {
-  -moz-appearance: textfield;
-}
-
-.quantity-input button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  background-color: #7DA04C;
-  border: none;
-  height: 41px;
-  width: 41px;
-  color: #fff;
 }
 
 .card {
@@ -1046,6 +917,7 @@ button:focus {
   text-align: center;
   font-size: 14px;
   color: #fff;
+  border: none;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -1311,6 +1183,41 @@ button:focus {
 
 .text-underline {
   text-decoration: underline !important;
+}
+
+.associado-item {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+  margin-bottom: 60px;
+  padding: 32px 20px 57px 30px;
+}
+
+.associado-item a {
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: -16px;
+  transform: translateX(-50%);
+  background-color: #7DA04C;
+  color: #fff;
+  padding: 6px 31px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-size: 12px;
+  transition: all 0.4s;
+}
+
+.associado-item a:hover {
+  transform: translateX(-50%) scale(1.04);
+}
+
+.associado-item img {
+  width: 90%;
 }
 
 .home-banner__caption {
@@ -2358,6 +2265,247 @@ button:focus {
   .estrutura__list li.spaced {
     padding-left: 0;
   }
+}
+
+.legislacao {
+  background-image: url("../../images/backgrounds/bg-interna.png");
+  background-position: top;
+  padding: 180px 0 120px;
+}
+
+@media screen and (max-width: 992px) {
+  .legislacao {
+    padding: 100px 0 40px;
+  }
+}
+
+.legislacao__linha {
+  position: relative;
+  margin: 0 auto;
+  max-width: 900px;
+  transition: all 0.4s;
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 992px) {
+  .legislacao__linha {
+    margin-top: 30px;
+  }
+}
+
+.legislacao__linha:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  width: 5px;
+  background-color: #CBCBCB;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.4s;
+}
+
+.legislacao__linha-ano {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  z-index: 2;
+  margin-bottom: 30px;
+}
+
+.legislacao__linha-ano:not(:first-child) {
+  margin-top: 80px;
+}
+
+@media screen and (max-width: 992px) {
+  .legislacao__linha-ano:not(:first-child) {
+    margin-top: 20px;
+  }
+}
+
+.legislacao__linha-ano span {
+  padding: 6px 53px;
+  background-color: #707070;
+  color: #fff;
+  font-weight: bold;
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+.legislacao__item {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  z-index: 2;
+}
+
+@media screen and (max-width: 992px) {
+  .legislacao__item {
+    justify-content: center !important;
+    width: 100%;
+    max-width: 450px;
+    margin: 0 auto;
+  }
+}
+
+.legislacao__item.left {
+  justify-content: flex-start;
+}
+
+.legislacao__item.left .header {
+  background-color: #30959F;
+}
+
+.legislacao__item.left .legislacao__item-content:after {
+  content: '';
+  position: absolute;
+  top: 48px;
+  right: -49px;
+  left: unset;
+  width: 25px;
+  height: 25px;
+  background-color: #30959F;
+  border: 4px solid #F4F4F4;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.legislacao__item.left .content.active {
+  border: dashed #30959F 1.1px;
+}
+
+.legislacao__item-content {
+  margin-bottom: 30px;
+  position: relative;
+  width: 46%;
+}
+
+.legislacao__item-content:after {
+  content: '';
+  position: absolute;
+  top: 38px;
+  left: -48px;
+  width: 25px;
+  height: 25px;
+  background-color: #7DA04C;
+  border: 4px solid #F4F4F4;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+@media screen and (max-width: 992px) {
+  .legislacao__item-content:after {
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .legislacao__item-content {
+    width: 100%;
+  }
+}
+
+.legislacao__item .header {
+  position: relative;
+  background-color: #7DA04C;
+  border-radius: 10px 10px 0 0;
+  padding: 20px 25px 14px 29px;
+  font-weight: bold;
+  font-size: 20px;
+  width: 100%;
+  color: #fff;
+}
+
+.legislacao__item .header .num {
+  display: block;
+  font-size: 30px;
+}
+
+.legislacao__item .header .closee {
+  display: none;
+}
+
+.legislacao__item .header.active .closee {
+  display: block;
+}
+
+.legislacao__item .header.active .expand {
+  display: none;
+}
+
+.legislacao__item-toggler {
+  position: absolute;
+  right: 12px;
+  bottom: 20px;
+  background-color: transparent;
+  border: none;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.legislacao__item-toggler span {
+  animation: fadeIn 0.5s;
+}
+
+.legislacao__item .content {
+  background-color: #fff;
+  border-radius: 0 0 10px 10px;
+  max-height: 0;
+  overflow: hidden;
+  border: none;
+  transition: opacity 0.4s;
+  opacity: 0;
+}
+
+.legislacao__item .content.active {
+  border: dashed #7DA04C 1.1px;
+  padding: 25px;
+  max-height: 1000px;
+  opacity: 1;
+}
+
+.pg-interna {
+  background-image: url(../../images/backgrounds/bg-interna.png);
+  background-size: cover;
+  padding: 180px 0 20px 0;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-interna {
+    padding: 100px 0 40px 0;
+  }
+}
+
+.pg-interna__header {
+  margin-bottom: 33px;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-interna__header {
+    text-align: center;
+  }
+}
+
+.pg-interna__header .title {
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #7DA04C;
+  margin-bottom: 29px;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-interna__header .title {
+    margin-bottom: 20px;
+  }
+}
+
+.pg-interna__header p {
+  max-width: 503px;
 }
 
 .ultimas-noticias {
