--- a/scss/sections/__banner-caixa.scss
+++ b/scss/sections/__banner-caixa.scss
@@ -1,5 +1,5 @@
 .banner-caixa {
-    background-image: url("../../images/backgrounds/banner-associacao.png");
+    background-image: url("../images/backgrounds/banner-associacao.png");
     background-size: cover;
     padding-top: 120px;
     padding-bottom: 90px;
@@ -144,7 +144,7 @@
                 left: 20px;
                 width: 30px;
                 height: 30px;
-                background-image: url("../../images/ico/quotes.png");
+                background-image: url("../images/ico/quotes.png");
                 background-position: center center;
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -163,7 +163,7 @@
                 right: 20px;
                 width: 30px;
                 height: 30px;
-                background-image: url("../../images/ico/quotes.png");
+                background-image: url("../images/ico/quotes.png");
                 background-position: center center;
                 background-size: contain;
                 background-repeat: no-repeat;
