--- a/scss/sections/__estrutura.scss
+++ b/scss/sections/__estrutura.scss
@@ -1,5 +1,5 @@
 .estrutura {
-    background-image: url(../../images/backgrounds/bg-interna.png);
+    background-image: url(../images/backgrounds/bg-interna.png);
     background-size: cover;
     padding: 170px 0 140px 0;
 
