--- a/scss/sections/__legislacao.scss
+++ b/scss/sections/__legislacao.scss
@@ -1,5 +1,5 @@
 .legislacao {
-    background-image: url("../../images/backgrounds/bg-interna.png");
+    background-image: url("../images/backgrounds/bg-interna.png");
     background-position: top ;
     padding: 180px 0 120px;
 
