--- a/scss/sections/__pg-interna.scss
+++ b/scss/sections/__pg-interna.scss
@@ -1,5 +1,5 @@
 .pg-interna {
-    background-image: url(../../images/backgrounds/bg-interna.png);
+    background-image: url(../images/backgrounds/bg-interna.png);
     background-size: cover;
     padding: 180px 0 20px 0;
 
