--- a/scss/sections/__conheca-steps.scss
+++ b/scss/sections/__conheca-steps.scss
@@ -13,7 +13,7 @@
         height: 140px;
         background-size: contain;
         background-repeat: no-repeat;
-        background-image: url("../../images/backgrounds/bottom-times.png");
+        background-image: url("../images/backgrounds/bottom-times.png");
         @media screen and (max-width: $bp-MD) {
             width: 200px;
             height: 80px;
