--- a/scss/sections/__banner-folha.scss
+++ b/scss/sections/__banner-folha.scss
@@ -36,18 +36,19 @@
             @media screen and (max-width: $bp-MD){
                 padding-top: 100px;
             }
-        
+            
         }
-
+        
         .inner-desc{
             color: #707070;
             font-weight: 400;
             font-size: 21px;
             max-width: 530px;
             margin-bottom: 50px;
-
+            
             @media screen and (max-width: $bp-MD){
                 font-size: 19px;
+                margin-bottom: 30px;
             }
             
             p{
