--- a/css/style.css
+++ b/css/style.css
@@ -735,7 +735,7 @@ button:focus {
 
 .main-nav.branco {
   background-color: #fff;
-  padding: 12px 0;
+  padding: 15px 0;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -750,7 +750,7 @@ button:focus {
 }
 
 .main-nav.branco .main-nav__brand img {
-  width: 250px;
+  width: 240px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1218,6 +1218,42 @@ select.form-control {
 
 .associado-item img {
   width: 90%;
+}
+
+.servico-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+  padding: 35px;
+  padding-top: 26px;
+  min-height: 205px;
+  background: #fff;
+  margin-bottom: 25px;
+}
+
+.servico-card img {
+  width: 50px;
+  margin-bottom: 19px;
+}
+
+.servico-card .title {
+  font-size: 14px;
+  color: #707070;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 150px;
+}
+
+.servico-card .btn-cprimary {
+  display: block;
+  margin-top: auto;
+  font-size: 14px;
+  padding: 4px 17px;
 }
 
 .home-banner__caption {
@@ -1695,11 +1731,17 @@ select.form-control {
   }
 }
 
+@media screen and (max-width: 992px) {
+  .interna-sobre__header {
+    text-align: center;
+  }
+}
+
 .interna-sobre__header .subtitle {
   color: #707070;
   font-size: 12px;
   text-transform: uppercase;
-  margin-bottom: 8px;
+  margin-bottom: 3px;
 }
 
 .interna-sobre__header .title {
@@ -2265,6 +2307,148 @@ select.form-control {
 @media screen and (max-width: 1200px) {
   .estrutura__list li.spaced {
     padding-left: 0;
+  }
+}
+
+.associacao {
+  background-image: url(../images/backgrounds/bg-interna2.png);
+  padding: 180px 0 130px;
+}
+
+@media screen and (max-width: 992px) {
+  .associacao {
+    padding: 100px 0 40px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .associacao .interna-sobre__header .title {
+    font-size: 26px;
+  }
+}
+
+.associacao__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+
+@media screen and (max-width: 992px) {
+  .associacao__item {
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+}
+
+.associacao__item .content {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 48%;
+}
+
+@media screen and (max-width: 1200px) {
+  .associacao__item .content {
+    width: 62%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .associacao__item .content {
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.associacao__item .content.right {
+  order: 2;
+}
+
+@media screen and (max-width: 992px) {
+  .associacao__item .content {
+    order: 1;
+  }
+}
+
+.associacao__item .number {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 185px;
+  height: 185px;
+  border-radius: 50%;
+  background-color: #30959F;
+  font-size: 75px;
+  font-weight: bold;
+  color: #fff;
+  margin-right: 30px;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 992px) {
+  .associacao__item .number {
+    margin-right: 0;
+    margin-bottom: 20px;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+.associacao__item .number:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 108%;
+  height: 108%;
+  border: 1.7px dashed #30959F;
+  border-radius: 50%;
+  pointer-events: none;
+}
+
+.associacao__item .caption {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.associacao__item .caption .title {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #30959F;
+  margin-bottom: 3px;
+}
+
+.associacao__item .caption .desc {
+  font-size: 16px;
+  color: #707070;
+}
+
+.associacao__item .line {
+  display: block;
+  width: 45%;
+  background-color: #30959F;
+  height: 0.5px;
+}
+
+@media screen and (max-width: 1200px) {
+  .associacao__item .line {
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .associacao__item .line {
+    width: 80%;
+    margin: 0 auto;
+    order: 3;
+    margin-top: 20px;
   }
 }
 
