--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -6,6 +6,7 @@
         './_banner-planeta',
         './_banner-caixa',
         './_estrutura',
+        './_associacao',
         './_legislacao',
         './_pg-interna',
         './_ultimas-noticias',
