--- a/scss/sections/__interna-sobre.scss
+++ b/scss/sections/__interna-sobre.scss
@@ -11,11 +11,16 @@
     }
     
     &__header{
+
+        @media screen and (max-width: $bp-LG){
+            text-align: center;
+        }
+
         .subtitle{
             color: #707070;
             font-size: 12px;
             text-transform: uppercase;
-            margin-bottom: 8px;
+            margin-bottom: 3px;
         }
         
         .title{
