--- a/scss/components/__all.scss
+++ b/scss/components/__all.scss
@@ -1,3 +1,5 @@
 @import './ui/__all',
         './_associado-item',
+        './_ponto-coleta',
+        './_curso-card',
         './_servico-card';
