--- a/scss/sections/__all.scss
+++ b/scss/sections/__all.scss
@@ -9,5 +9,6 @@
         './_associacao',
         './_legislacao',
         './_pg-interna',
+        './_pg-evento',
         './_ultimas-noticias',
         './_conheca-steps';
