--- a/scss/sections/__pg-interna.scss
+++ b/scss/sections/__pg-interna.scss
@@ -3,7 +3,7 @@
     background-size: cover;
     padding: 180px 0 20px 0;
 
-    @media screen and (max-width: $bp-LG){
+    @media screen and (max-width: $bp-MD){
         padding: 100px 0 40px 0;
     }
 
