--- a/css/style.css
+++ b/css/style.css
@@ -930,6 +930,27 @@ select.form-control {
   background-color: #729245;
 }
 
+.btn-outline-cprimary {
+  font-family: 'Helvetica Neue', sans-serif;
+  border-radius: 4px;
+  padding: 11px 18px;
+  border: 2px solid #7DA04C;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 14px;
+  color: #7DA04C;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-outline-cprimary:hover {
+  color: #fff;
+  background-color: #7DA04C;
+}
+
 .btn-csecondary {
   font-family: 'Helvetica Neue', sans-serif;
   border-radius: 4px;
@@ -1218,6 +1239,118 @@ select.form-control {
 
 .associado-item img {
   width: 90%;
+}
+
+.ponto-coleta {
+  margin-bottom: 45px;
+}
+
+@media screen and (max-width: 768px) {
+  .ponto-coleta {
+    margin-bottom: 30px;
+  }
+}
+
+.ponto-coleta__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+  padding: 27px 50px;
+  background: #fff;
+  max-width: 320px;
+  margin-bottom: 15px;
+}
+
+.ponto-coleta__img img {
+  width: 100%;
+}
+
+.ponto-coleta__info {
+  padding: 10px;
+}
+
+.ponto-coleta__info li {
+  display: flex;
+}
+
+.ponto-coleta__info li i {
+  width: 30px;
+  margin-top: 2px;
+  color: #7DA04C;
+}
+
+.curso-card {
+  position: relative;
+  margin-bottom: 60px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.curso-card:hover {
+  -webkit-transform: scale(1.03);
+  -moz-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  -o-transform: scale(1.03);
+  transform: scale(1.03);
+}
+
+@media screen and (max-width: 768px) {
+  .curso-card {
+    margin-bottom: 40px;
+  }
+}
+
+.curso-card__tag {
+  position: absolute;
+  left: 10px;
+  top: -10px;
+  background-color: #707070;
+  padding: 3px 9px;
+  text-transform: uppercase;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 12px;
+}
+
+.curso-card__img img {
+  width: 100%;
+  object-fit: cover;
+  object-position: left top;
+}
+
+@media screen and (min-width: 768px) {
+  .curso-card__img img {
+    min-height: 309px;
+  }
+}
+
+.curso-card__caption {
+  background-color: #fff;
+  padding: 12px 18px;
+}
+
+.curso-card__caption .name {
+  color: #707070;
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.curso-card__caption .valor {
+  font-size: 24px;
+  color: #30959F;
+}
+
+.curso-card__caption .data {
+  font-size: 24px;
+  color: #7DA04C;
+  margin-bottom: 0;
 }
 
 .servico-card {
@@ -2659,7 +2792,7 @@ select.form-control {
   padding: 180px 0 20px 0;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   .pg-interna {
     padding: 100px 0 40px 0;
   }
@@ -2691,6 +2824,100 @@ select.form-control {
 
 .pg-interna__header p {
   max-width: 503px;
+}
+
+.pg-evento {
+  padding: 180px 0 30px;
+  background-image: url(../images/backgrounds/bg-interna.png);
+}
+
+@media screen and (max-width: 768px) {
+  .pg-evento {
+    padding-top: 130px;
+    text-align: center;
+  }
+}
+
+.pg-evento__tag {
+  position: absolute;
+  font-size: 20px;
+  color: #fff;
+  left: 15px;
+  top: -15px;
+  background-color: #707070;
+  border-radius: 7px;
+  text-transform: uppercase;
+  padding: 4.6px 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .pg-evento__tag {
+    font-size: 18px;
+  }
+}
+
+.pg-evento__img {
+  position: relative;
+}
+
+.pg-evento__img img {
+  width: 100%;
+}
+
+.pg-evento__caption {
+  padding-left: 35px;
+  padding-top: 30px;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-evento__caption {
+    padding-left: 0px;
+  }
+}
+
+.pg-evento__caption .title {
+  font-size: 32px;
+  color: #707070;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-evento__caption .title {
+    font-size: 26px;
+  }
+}
+
+.pg-evento__caption .desc {
+  font-size: 18px;
+  margin-bottom: 70px;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-evento__caption .desc {
+    font-size: 16px;
+    margin-bottom: 40px;
+  }
+}
+
+.pg-evento .subtitle {
+  font-size: 32px;
+  color: #707070;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 992px) {
+  .pg-evento .subtitle {
+    font-size: 26px;
+  }
+}
+
+.pg-evento__list .title {
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .ultimas-noticias {
