--- a/css/style.css
+++ b/css/style.css
@@ -775,6 +775,7 @@ button:focus {
   padding: 10px 14px;
   color: #707070;
   font-weight: 400;
+  height: 45px;
   border-radius: 4px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
 }
@@ -794,6 +795,14 @@ button:focus {
 
 .form-control.error {
   border-color: #e07777;
+}
+
+.form-control.noshadow {
+  box-shadow: none !important;
+}
+
+textarea.form-control {
+  height: 120px;
 }
 
 select.form-control {
@@ -1937,6 +1946,12 @@ select.form-control {
   }
 }
 
+.interna-sobre__img iframe {
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+}
+
 .banner-planeta {
   background-color: #30959F;
   padding: 30px 0;
@@ -2836,6 +2851,11 @@ select.form-control {
     padding-top: 130px;
     text-align: center;
   }
+}
+
+.pg-evento__centered {
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .pg-evento__tag {
