--- a/scss/components/UI/__forms.scss
+++ b/scss/components/UI/__forms.scss
@@ -6,6 +6,7 @@
     padding: 10px 14px;
     color: #707070;
     font-weight: 400;
+    height: 45px;
     border-radius: 4px;
     box-shadow: 0px 3px 6px rgba(0,0,0,.20);
     
@@ -26,6 +27,14 @@
         border-color: rgb(224, 119, 119);
     }
 
+    &.noshadow{
+        box-shadow: none !important;
+    }
+
+}
+
+textarea.form-control{
+    height: 120px;
 }
 
 select.form-control{
