--- a/scss/sections/__interna-sobre.scss
+++ b/scss/sections/__interna-sobre.scss
@@ -78,5 +78,12 @@
             width: 100%;
             min-height: 400px;
         }
+
+        iframe{
+            width: 100%;
+            height: 100%;
+
+            min-height: 500px;
+        }
     }
 }
