--- a/scss/components/UI/__buttons.scss
+++ b/scss/components/UI/__buttons.scss
@@ -24,6 +24,7 @@
     text-transform: uppercase;
     text-align: center;
     font-size: 14px;
+    background: transparent;
     color: #7DA04C;
     @include transition();
 
