--- a/scss/sections/__pg-interna.scss
+++ b/scss/sections/__pg-interna.scss
@@ -28,6 +28,10 @@
 
         p{
             max-width: 503px;
+
+            @media screen and (max-width: $bp-LG){
+                margin: 0 auto;
+            }
         }
     }
 }
