--- a/scss/components/UI/__forms.scss
+++ b/scss/components/UI/__forms.scss
@@ -8,36 +8,28 @@
     font-weight: 400;
     height: 45px;
     border-radius: 4px;
-    box-shadow: 0px 3px 6px rgba(0,0,0,.20);
-    
+    box-shadow: 0 3px 6px rgba(0,0,0,.20);
     &:focus {
         outline: none;
-        box-shadow: 0px 3px 6px rgba(0,0,0,.20);
+        box-shadow: 0 3px 6px rgba(0,0,0,.20);
         color: #383838;
     }
 
-    &[type="password"] {
-        font-size: 35px;
-        line-height: 20px;
-        letter-spacing: -2px;
-        padding: 2.8px 14px;
-    }
-
     &.error {
-        border-color: rgb(224, 119, 119);
+        border: 1px solid rgb(224, 119, 119) !important;
     }
 
-    &.noshadow{
+    &.noshadow {
         box-shadow: none !important;
     }
 
 }
 
-textarea.form-control{
+textarea.form-control {
     height: 120px;
 }
 
-select.form-control{
+select.form-control {
     height: 43px !important;
 }
 
@@ -49,9 +41,10 @@ select.form-control{
         margin-bottom: 3px;
     }
 
-    label.error {
-        color: rgb(224, 119, 119);
-        font-size: 13px;
-        margin-top: 4px;
-    }
+}
+label.error {
+    color: rgb(224, 119, 119) !important;
+    font-size: 13px;
+    width: 100%;
+    margin-top: 4px;
 }
