Update main nav

--- a/partials/__navbar.html
+++ b/partials/__navbar.html
@@ -78,8 +78,25 @@
             </button>
 
             <ul class="main-nav__links mb-4 mb-lg-0">
-                <li class="wow fadeIn" data-wow-delay="0.1s">
-                    <a href="#">O IBER</a>
+                <li class="wow fadeIn has-dropdown" data-wow-delay="0.1s">
+                    <a href="#" class="disabled-link">IBER</a>
+
+                    <div class="main-nav__dropdown">
+                        <ul>
+                            <li>
+                                <a href="#">Sobre</a>
+                            </li>
+                            <li>
+                                <a href="#">Diretoria</a>
+                            </li>
+                            <li>
+                                <a href="#">Estrutura</a>
+                            </li>
+                            <li>
+                                <a href="#">Onde atuamos</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                <li class="wow fadeIn" data-wow-delay="0.2s">
                     <a href="#">Serviços</a>
