--- a/css/style.css
+++ b/css/style.css
@@ -612,7 +612,7 @@ button:focus {
 }
 
 .main-nav__links li:not(:last-child) {
-  margin-right: 33px;
+  margin-right: 37px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -785,6 +785,55 @@ button:focus {
 
 .main-nav.branco:after {
   display: none;
+}
+
+.main-nav .has-dropdown {
+  position: relative;
+}
+
+.main-nav .has-dropdown:hover .main-nav__dropdown {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.main-nav__dropdown {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  padding-top: 24px;
+  pointer-events: none;
+  transition: all 0.4s;
+}
+
+.main-nav__dropdown ul {
+  position: relative;
+  width: 190px;
+  padding: 24px 34px;
+  background-color: #7DA04C;
+  border-radius: 4px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+.main-nav__dropdown ul:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -10px;
+  width: 0;
+  height: 0;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid #7DA04C;
+}
+
+.main-nav__dropdown li {
+  font-size: 14px;
+}
+
+.main-nav__dropdown li:not(:last-child) {
+  margin-bottom: 12px;
 }
 
 .form-control {
