--- a/scss/components/UI/__main-nav.scss
+++ b/scss/components/UI/__main-nav.scss
@@ -53,7 +53,7 @@
             }
 
             &:not(:last-child) {
-                margin-right: 33px;
+                margin-right: 37px;
                 @media screen and (max-width: $bp-XL) {
                     margin-right: 20px;
                 }
@@ -204,6 +204,56 @@
         }
         &:after {
             display: none;
+        }
+    }
+
+    .has-dropdown {
+        position: relative;
+        &:hover {
+            .main-nav__dropdown {
+                opacity: 1;
+                pointer-events: all;
+            }
+        }
+    }
+
+    &__dropdown {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: 0;
+        padding-top: 24px;
+        pointer-events: none;
+        transition: all 0.4s;
+
+        ul {
+            position: relative;
+            width: 190px;
+            padding: 24px 34px;
+            background-color: $color-primary;
+            border-radius: 4px;
+            box-shadow: 0 3px 6px rgba(0,0,0,.25);
+
+            &:after {
+                content: '';
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                top: -10px;
+                width: 0;
+                height: 0;
+                border-left: 12px solid transparent;
+                border-right: 12px solid transparent;
+                border-bottom: 12px solid $color-primary;
+            }
+        }
+
+        li {
+            font-size: 14px;
+            
+            &:not(:last-child){
+                margin-bottom: 12px;
+            }
         }
     }
 }
